# event_system_project

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 5429f3bd3543_initial_tables.py
app/: config.py  dependency.py  main.py  middlewares.py  tasks.py  utils.py
app/admin/: auth.py  settings.py  views.py
app/models/: models.py
app/routers/: auth.py  event.py  event_registration.py  user.py
app/schemas/: auth.py  event.py  event_registration.py
tests/: conftest.py  test_auth.py  test_email.py
